apps/kubernetes/base/kubernetes-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-svc
  namespace: kubernetes
  annotations:
    external-dns.alpha.kubernetes.io/hostname: kubernetes.diegoluisi.eti.br
  labels:
    app: kubernetes
    version: 0.0.1
    backstage.io/kubernetes-id: kubernetes
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: kubernetes
